--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com</groupId>
     <artifactId>demoapp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>demoapp</name>
     <packaging>war</packaging>
 
@@ -16,86 +16,94 @@
         <junit.version>5.9.2</junit.version>
     </properties>
 
-  <dependencies>
-      <dependency>
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Internal Repository</name>
+            <url>http://localhost:8081/path/to/your/repository</url>
+        </repository>
+    </distributionManagement>
+
+    <dependencies>
+        <dependency>
           <groupId>org.mindrot</groupId>
           <artifactId>jbcrypt</artifactId>
           <version>0.4</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>com.auth0</groupId>
           <artifactId>java-jwt</artifactId>
           <version>4.4.0</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>javax.json.bind</groupId>
           <artifactId>javax.json.bind-api</artifactId>
           <version>1.0</version>
           <scope>provided</scope>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>javax.json</groupId>
           <artifactId>javax.json-api</artifactId>
           <version>1.1.4</version>
           <scope>provided</scope>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>javax.security.enterprise</groupId>
           <artifactId>javax.security.enterprise-api</artifactId>
           <version>1.0</version>
           <scope>provided</scope>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>javax.servlet-api</artifactId>
           <version>4.0.1</version>
           <scope>provided</scope>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.glassfish.jersey.containers</groupId>
           <artifactId>jersey-container-servlet</artifactId>
           <version>2.34</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.glassfish.jersey.media</groupId>
           <artifactId>jersey-media-json-jackson</artifactId>
           <version>2.34</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.glassfish.jersey.inject</groupId>
           <artifactId>jersey-cdi2-se</artifactId>
           <version>2.34</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.glassfish.jersey.core</groupId>
           <artifactId>jersey-client</artifactId>
           <version>2.34</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-core</artifactId>
           <version>5.6.15.Final</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.jboss.weld.se</groupId>
           <artifactId>weld-se-core</artifactId>
           <version>3.1.9.Final</version>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter-api</artifactId>
           <version>${junit.version}</version>
           <scope>test</scope>
-      </dependency>
-      <dependency>
+        </dependency>
+        <dependency>
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter-engine</artifactId>
           <version>${junit.version}</version>
           <scope>test</scope>
-      </dependency>
-  </dependencies>
+        </dependency>
+    </dependencies>
 
-  <build>
+    <build>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -103,5 +111,5 @@
             <version>3.3.2</version>
         </plugin>
     </plugins>
-  </build>
+    </build>
 </project>
