--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,4 +17,8 @@
         <servlet-name>DemoApp Service</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+
+    <listener>
+        <listener-class>com.demoapp.configuration.InitializationListener</listener-class>
+    </listener>
 </web-app>
